--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,25 @@
 name: sink
 description: Easily verify that you&#x27;re spending more than you can afford
 
+environment:
+    sdk: ">=2.17.5 <3.0.0"
+
+
 dependencies:
   flutter:
     sdk: flutter
-
-  firebase_core: ^0.4.0+8
-  cloud_firestore: ^0.12.9
-  firebase_auth: ^0.15.3+1
-  google_sign_in: ^4.0.4
-  flutter_redux: ^0.6.0
-  flutter_circular_chart: ^0.1.0
-  font_awesome_flutter: ^8.4.0
-  intl: ^0.15.8
-  uuid: ^1.0.3
-  quiver: ^2.0.2
+    
+    
+  firebase_core: ^2.15.0
+  cloud_firestore: ^4.8.4
+  firebase_auth: ^4.7.2
+  google_sign_in: ^6.1.4
+  flutter_redux: ^0.10.0
+  # flutter_circular_chart: ^0.1.0
+  font_awesome_flutter: ^10.5.0
+  intl: ^0.18.1
+  uuid: ^3.0.7
+  quiver: ^3.2.1
 
 dev_dependencies:
   flutter_test:
